--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <link rel="canonical" href="%VITE_SITE_URL%" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
 
     
     <!-- Preconnect to external domains for performance -->
