--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="canonical" href="%VITE_SITE_URL%" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" />
 
 
     
