--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>%VITE_SITE_NAME% - Comptes Premium Netflix, ChatGPT & Plus | Tunisie</title>
-    <meta name="description" content="Achetez vos comptes premium Netflix, ChatGPT, Spotify et Disney+ aux meilleurs prix en Tunisie. Livraison rapide, support 24/7 et garantie incluse." />
+    <meta name="description" content="Achetez vos comptes premium Netflix , ChatGPT Plus , Spotify Premium et plus aux meilleurs prix en Tunisie. Livraison rapide, support 24/7 et garantie incluse." />
     <meta name="author" content="%VITE_SITE_NAME%" />
-    <meta name="keywords" content="Netflix premium, ChatGPT plus, Spotify premium, Disney+, comptes premium tunisie, services numériques" />
+    <meta name="keywords" content="Netflix premium, ChatGPT plus, Spotify premium, Xbox Game Pass , PSN PLUS, comptes premium Tunisie, Services numériques" />
 
     <meta property="og:title" content="%VITE_SITE_NAME% - Comptes Premium Netflix, ChatGPT & Plus" />
     <meta property="og:description" content="Vos comptes premium aux meilleurs prix en Tunisie. Netflix, ChatGPT, Spotify et plus encore avec garantie et support 24/7." />
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@cwarett_tn" />
     <meta name="twitter:title" content="%VITE_SITE_NAME% - Comptes Premium Tunisie" />
-    <meta name="twitter:description" content="Netflix, ChatGPT, Spotify et Disney+ aux meilleurs prix" />
+    <meta name="twitter:description" content="Netflix, ChatGPT, Spotify et plus aux meilleurs prix" />
   
     <link rel="canonical" href="%VITE_SITE_URL%" />
     
